
    HADOOP-10950. rework heap management vars (John Smith via aw)

    HADOOP-6857. FsShell should report raw disk usage including replication
    factor. (Byron Wong via shv)

    HADOOP-11657. Align the output of `hadoop fs -du` to be more Unix-like.
    (aajisaka)

    HADOOP-11553. Formalize the shell API (aw)

    HADOOP-11731. Rework the changelog and releasenotes (aw)

  NEW FEATURES

    HADOOP-6590. Add a username check for hadoop sub-commands (John Smith via
    aw)

    HADOOP-11353. Add support for .hadooprc (aw)

    HADOOP-9044. add FindClass main class to provide classpath checking
    of installations (Steve Loughran via aw)

    HADOOP-11485. Pluggable shell integration (aw)

    HADOOP-8934. Shell command ls should include sort options (Jonathan Allen
    via aw)

    HADOOP-11554. Expose HadoopKerberosName as a hadoop subcommand (aw)

    HADOOP-11565. Add --slaves shell option (aw)

    HADOOP-9642. Configuration to resolve environment variables via
    ${env.VARIABLE} references (Kengo Seki via aw)

  IMPROVEMENTS

    HADOOP-8017. Configure hadoop-main pom to get rid of M2E plugin execution
    not covered (Eric Charles via bobby)

    HADOOP-8015. ChRootFileSystem should extend FilterFileSystem 
    (Daryn Sharp via bobby)

    HADOOP-7595. Upgrade dependency to Avro 1.5.3. (Alejandro Abdelnur via atm)

    HADOOP-8078. Add capability to turn on security in unit tests. (Jaimin 
    Jetly via jitendra)

    HADOOP-7757. Test file reference count is at least 3x actual value (Jon
    Eagles via bobby)

    HADOOP-8147. test-patch should run tests with -fn to avoid masking test
    failures (Robert Evans via tgraves)

    HADOOP-8290. Remove remaining references to hadoop.native.lib (harsh)

    HADOOP-8308. Support cross-project Jenkins builds. (tomwhite)

    HADOOP-8297. Writable javadocs don't carry default constructor (harsh)

    HADOOP-8360. empty-configuration.xml fails xml validation
    (Radim Kolar via harsh)
